System Icon tray + installer

--- a/PasswordManager.csproj
+++ b/PasswordManager.csproj
@@ -35,7 +35,7 @@
 		<HoursBetweenUpdateChecks>0</HoursBetweenUpdateChecks>
 		<PackageIcon>PG.png</PackageIcon>
 		<AppxPackageSigningEnabled>True</AppxPackageSigningEnabled>
-		<PackageCertificateThumbprint>008092088ECD1327E7D3547E41509568A6FE1785</PackageCertificateThumbprint>
+		<PackageCertificateThumbprint>AF116734140455EEB55B0A5E2A69ACCBDC4AC9FA</PackageCertificateThumbprint>
 		<AppxPackageSigningTimestampDigestAlgorithm>SHA256</AppxPackageSigningTimestampDigestAlgorithm>
 		<AppInstallerUri>C:\Users\alexi\source\repos\PasswordManager\PasswordManager\bin\Debug\net6.0-windows10.0.19041.0\win10-x64\AppPackages</AppInstallerUri>
 	</PropertyGroup>
@@ -73,6 +73,7 @@
 
 	<ItemGroup>
 	  <PackageReference Include="Microsoft.Toolkit.Mvvm" Version="7.1.2" />
+	  <PackageReference Include="PInvoke.User32" Version="0.7.124" />
 	  <PackageReference Include="SkiaSharp.Views.Maui.Core" Version="2.88.3" />
 	  <PackageReference Include="sqlite-net-pcl" Version="1.8.116" />
 	  <PackageReference Include="SQLitePCLRaw.bundle_green" Version="2.1.4" />
