Show/Hide Password Implementation + Welcome page.

--- a/PasswordManager.csproj
+++ b/PasswordManager.csproj
@@ -59,6 +59,8 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <None Remove="Platforms\Windows\test.ico" />
+	  <None Remove="Platforms\Windows\trayicon.ico" />
 	  <None Remove="Resources\AppIcon\PG.ico" />
 	  <None Remove="Resources\Images\PG.png" />
 	  <None Remove="Resources\Images\random.png" />
@@ -66,9 +68,18 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <MauiImage Include="Platforms\Windows\trayicon.ico">
+	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+	  </MauiImage>
 	  <Content Include="Resources\AppIcon\PG.ico">
 	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 	  </Content>
+	</ItemGroup>
+
+	<ItemGroup>
+	  <MauiImage Include="Platforms\Windows\test.ico">
+	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+	  </MauiImage>
 	</ItemGroup>
 
 	<ItemGroup>
