--- a/PasswordManager.csproj
+++ b/PasswordManager.csproj
@@ -71,9 +71,9 @@
 	  <MauiImage Include="Platforms\Windows\trayicon.ico">
 	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
 	  </MauiImage>
-	  <Content Include="Resources\AppIcon\PG.ico">
-	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-	  </Content>
+	  <MauiIcon Include="Resources\AppIcon\pg.ico">
+	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+	  </MauiIcon>
 	</ItemGroup>
 
 	<ItemGroup>
